ggplot2 0.8.9 (2010-XX-XX) ----------------------------------------

* mean_se: a new summary function to work with stat_summary that calculates mean and one standard error on either side (thanks to contribution from Kohske Takahashi)
* stat_smooth: once again works if n > 1000 and SE = F (thanks to bug report from Theiry Onkelinx and fix from Kohske Takahashi)
* stat_smooth: draw line if only 2 unique x values, not three as previously * guides: fixed #126
* hcl: can now set c and l, and preserves names (thanks to suggestion by Richard Cotton)
* +: meaningful error message if + doesn't know how to deal with an object type
* +: adding NULL to a plot returns the plot (idempotent under addition) (thanks to suggestion by Matthew O'Meara)
* scale_colour_continuous: works correctly with single continuous value (fixes #73)
* scale_alpha: setting limits to a range inside the data now works (thanks to report by Dr Proteome)
* geom_hex: now correctly applies alpha to fill colour not outline colour (thanks to bug report from Ian Fellows)

ggplot2 0.8.8 (2010-07-02) ----------------------------------------

Bug fixes:

* coord_equal finally works as expected (thanks to continued prompting from Jean-Olivier Irisson)
* coord_equal renamed to coord_fixed to better represent capabilities
* coord_polar and coord_polar: new munching system that uses distances (as defined by the coordinate system) to figure out how many pieces each segment should be broken in to (thanks to prompting from Jean-Olivier Irisson)
* fix ordering bug in facet_wrap (thanks to bug report by Frank Davenport)
* geom_errorh correctly responds to height parameter outside of aes
* geom_hline and geom_vline will not impact legend when used for fixed intercepts
* geom_hline/geom_vline: intercept values not set quite correctly which caused a problem in conjunction with transformed scales (reported by Seth Finnegan)
* geom_line: can now stack lines again with position = "stack" (fixes #74)